--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -57,7 +57,7 @@ body {
 
 a {
   text-decoration: none;
-  transition: all 2s;
+  transition: color 2s;
   color: $solarized-blue;
 }
 .night a {
@@ -127,7 +127,7 @@ a {
   grid-row-start: 1;
   grid-row-end: 2;
   z-index: -1;
-  transition: all 2s;
+  transition: opacity 2s;
 }
 #night-sky {
   background: linear-gradient(
@@ -141,7 +141,7 @@ a {
   width: 100%;
   height: 100%;
   z-index: -1;
-  transition: all 2s;
+  transition: opacity 2s;
 }
 
 /**********/
@@ -170,7 +170,7 @@ a {
 }
 @media (max-width: $small-screen-break) {
   #header-content-container {
-    grid-template-columns: 13% auto 16% 16%;
+    grid-template-columns: 13% auto 13%;
     grid-gap: 0;
   }
 }
@@ -257,15 +257,15 @@ a {
 #life-button-container button {
   align-items: center;
   background-color: $solarized-blue;
-  background-position: center;
-  background-repeat: no-repeat;
   border: none;
   border-radius: 3px;
   display: flex;
   font-family: "Noto Sans Symbols 2", sans-serif;
   font-size: 1.4rem;
+  // font-size: 20px;
   height: 2rem;
   justify-content: center;
+  line-height: inherit;
   margin-left: 5px;
   transition: color 2s;
   width: 2rem;
@@ -331,7 +331,7 @@ a {
     width: 2rem;
     height: 2rem;
     opacity: 1;
-    transition: all 0.5s;
+    transition: background-color 0.5s;
   }
 }
 #day-toggle {
@@ -364,14 +364,14 @@ a {
     background-size: 100% 100%;
     grid-column-start: 2;
     grid-row-start: 1;
-    transition: all 2s;
+    transition: opacity 2s;
   }
   #night-ground {
     background: url("../img/desert-ground-night.png");
     background-size: 100% 100%;
     grid-column-start: 2;
     grid-row-start: 1;
-    transition: all 2s;
+    transition: opacity 2s;
   }
 }
 @media (max-width: 800px) {
@@ -391,7 +391,7 @@ a {
   grid-row-start: 1;
   grid-row-end: 2;
   grid-template-rows: 43% 5% 21% 19% 12%;
-  transition: all 2s;
+  transition: opacity 2s;
 }
 .footer-right {
   display: grid;
@@ -400,7 +400,7 @@ a {
   grid-row-start: 1;
   grid-row-end: 2;
   grid-template-rows: 51% 0 19% 11% 19%;
-  transition: all 2s;
+  transition: opacity 2s;
 }
 .footer-side-day {
   .desert-sky {
@@ -479,8 +479,8 @@ a {
 @media (max-width: $small-screen-break) {
   #menu-area ul {
     display: grid;
-    grid-template-columns: repeat(4, 24%);
-    column-gap: 1%;
+    grid-template-columns: repeat(3, 32%);
+    column-gap: 2%;
     li {
       display: grid;
       button {
@@ -514,11 +514,6 @@ a {
   margin-bottom: 10px;
   width: 300px;
 }
-// @media (max-width: $small-screen-break) {
-//   #self-portrait {
-//     width: 100px;
-//   }
-// }
 #about-badges-container,
 #about-contact-container {
   display: flex;
@@ -540,6 +535,9 @@ a {
     border: 1px solid $solarized-base1;
     border-radius: 5px;
   }
+}
+.italic {
+  font-style: italic;
 }
 
 /************/
@@ -573,11 +571,13 @@ a {
   justify-content: center;
   margin-bottom: 0.8rem;
   max-width: 100%;
+  div {
+    flex-basis: auto;
+    margin: 0 1rem;
+  }
   img {
     border: 1px solid $solarized-base1;
     border-radius: 5px;
-    flex-basis: auto;
-    margin: 0 1rem;
     max-width: 600px;
     width: 100%;
   }
