--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -69,7 +69,7 @@ a {
   grid-column-gap: 3%;
   row-gap: 50px;
   grid-template-rows: 100px calc(100vh - 300px) 100px;
-  grid-template-columns: 10% 15% auto 10%;
+  grid-template-columns: auto minmax(200px, 300px) minmax(800px, 1000px) auto;
   grid-template-areas:
     "header header header header"
     ". nav content ."
@@ -160,7 +160,7 @@ a {
 #header-content-container {
   display: grid;
   grid-column-gap: 3%;
-  grid-template-columns: 10% 15% auto 10%;
+  grid-template-columns: auto minmax(200px, 300px) minmax(800px, 1000px) auto;
   width: 100%;
 }
 @media (max-width: $medium-screen-break) {
