--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -585,8 +585,20 @@ a {
   margin-top: 0;
 }
 .project-tech {
+  display: flex;
   font-family: "Montserrat", sans-serif;
+  font-size: 1.1rem;
   margin-bottom: 0.8rem;
+  span {
+    display: flex;
+    justify-content: center;
+    &:not(:first-of-type) {
+      margin-left: 1rem;
+    }
+  }
+  img {
+    height: 25px;
+  }
 }
 .project-git {
   font-family: "Montserrat", sans-serif;
