--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -216,8 +216,8 @@ a {
   width: 100%;
 }
 .header-grid-square {
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  // backdrop-filter: blur(5px);
+  // -webkit-backdrop-filter: blur(5px);
   border: 1px solid #66666611;
   border-radius: 5px;
   height: 16px;
@@ -236,10 +236,10 @@ a {
   animation: fadeIn 500ms;
 }
 .grid-square-active {
-  backdrop-filter: blur(5px);
+  // backdrop-filter: blur(5px);
+  // -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1);
-  -webkit-backdrop-filter: blur(5px);
 }
 .grid-square-active-0 {
   background: $solarized-blue-faded;
