--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bitter&family=Montserrat&family=Noto+Sans+Symbols+2&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap");
 
 $main-palette-color: #778ccc;
 $solarized-base03: #002b36;
@@ -51,7 +51,7 @@ $transition-time: 0s;
 
 body {
   background-color: #ffffff;
-  font-family: "Bitter", serif;
+  font-family: "Merriweather", serif;
   font-size: 0.9rem;
   padding: 0;
   margin: 0;
@@ -492,7 +492,7 @@ a {
         background-color: inherit;
         border: none;
         font-family: inherit;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         padding: 0.5rem 0;
         transition: color $transition-time;
         width: 100%;
@@ -531,7 +531,9 @@ a {
 /*********/
 /* About */
 /*********/
-
+#about-section {
+  font-size: 1.15rem;
+}
 #self-portrait {
   border: 1px solid $solarized-base1;
   border-radius: 5px;
